# mcpflow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKREF.txt  README.md  SUMMARY.py  TESTING.md
.github/workflows/: publish.yml  test.yml
docs/: API-REFERENCE.md  ARCHITECTURE.md  EXAMPLES.md  QUICKSTART.md  RELEASING.md  WEBMCP.md
docs/superpowers/specs/: 2026-07-18-llm-provider-integration-design.md
examples/: README.md
examples/01-simple-echo/: echo_server.py  test_echo_server.py
examples/01-simple-echo-server/: README.md  echo_server.py  requirements.txt  test_echo.py
examples/02-weather-mcp/: README.md  test_weather.py  test_weather_server.py  weather_server.py
examples/03-multi-mcp-agent/: README.md  agent.py  test_agent.py
examples/03-team-config/: team_config_example.py
examples/04-team-config/: README.md  requirements.txt  team_config.py  test_team_config.py
examples/04-testing-patterns/: test_mocking_patterns.py
examples/05-truss-interceptor/: README.md  demo.py  requirements.txt  truss_style_interceptor.py
python/: .gitignore  README.md  pyproject.toml
python/mcpflow/: __init__.py  chat.py  cli.py  config.py  http_bridge.py  registry.py  server.py  testing.py  tracing.py  types.py
python/mcpflow/providers/: __init__.py  base.py  litellm_provider.py  openai_compatible.py
python/mcpflow/webmcp/: __init__.py  bridge.py  browser.py  cache.py  declarative_discovery.py  discovery.py  http_transport.py  interceptor.py  multi_origin.py  policy.py  result_diffing.py  security.py  server_facade.py  session.py  streaming.py  translator.py  types.py
python/tests/: __init__.py  test_cache.py  test_chat.py  test_cli.py  test_config.py  test_declarative_discovery.py  test_http_bridge.py  test_http_transport.py  test_http_transport_e2e.py  test_init.py  test_interceptor.py  test_multi_origin.py  test_policy.py  test_providers.py  test_registry.py  test_result_diffing.py  test_server.py  test_session.py  test_streaming.py  test_testing.py  test_tracing.py  test_webmcp.py  test_webmcp_e2e.py
